[package]
name = "tombergm-chess-gui"
version = "0.1.0"

[dependencies]
ggez = "0.9.3"
scrappy-chess = { git = "https://github.com/INDA23PlusPlus/albjorkm-chess" }
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
